--- a/i18n/nl.po
+++ b/i18n/nl.po
@@ -1,17 +1,5 @@
 msgid ""
-msgstr ""
-"POT-Creation-Date: 2025-10-27 12:12+0100\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Generator: @lingui/cli\n"
-"Language: nl\n"
-"Project-Id-Version: \n"
-"Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Plural-Forms: \n"
+msgstr "Project-Id-Version: \nReport-Msgid-Bugs-To: \nPOT-Creation-Date: 2025-10-27 12:12+0100\nPO-Revision-Date: 2025-11-04 18:58+0000\nLast-Translator: Gijs van Tulder <gijs@vantulder.net>\nLanguage-Team: Dutch <https://hosted.weblate.org/projects/tessel/game/nl/>\nLanguage: nl\nMIME-Version: 1.0\nContent-Type: text/plain; charset=utf-8\nContent-Transfer-Encoding: 8bit\nPlural-Forms: nplurals=2; plural=n != 1;\nX-Generator: Weblate 5.14.1-dev\n"
 
 #. js-lingui-explicit-id
 #: src/grid/atlas/AmmannBeenkerAtlas.ts:11
@@ -26,7 +14,7 @@ msgstr "Ammann-Beenker-betegeling"
 #. js-lingui-explicit-id
 #: src/grid/atlas/CairoAtlas.ts:11
 msgid "atlas.CairoAtlas.friendlyName"
-msgstr "Cairo pentagonal"
+msgstr "Caïro vijfhoekig"
 
 #. js-lingui-explicit-id
 #: src/grid/atlas/CairoAtlas.ts:15
@@ -354,7 +342,7 @@ msgstr "{value, plural, one {Je hebt één tegel geplaatst.} other {Je hebt # te
 #. js-lingui-explicit-id
 #: src/ui/statistics/StatisticsDisplay.ts:70
 msgid "ui.statistics.notPlayed"
-msgstr "Je hebt nog niet gespeeld."
+msgstr "Je hebt nog niet gespeeld!"
 
 #. js-lingui-explicit-id
 #: src/ui/statistics/StatisticsDisplay.ts:59
@@ -364,7 +352,7 @@ msgstr "Statistieken"
 #. js-lingui-explicit-id
 #: src/ui/shared/toggles.ts:41
 msgid "ui.toggles.autorotate"
-msgstr "Autorotate"
+msgstr "Automatisch roteren"
 
 #. js-lingui-explicit-id
 #: src/ui/shared/toggles.ts:64
