--- a/i18n/hu.po
+++ b/i18n/hu.po
@@ -1,2 +1,2 @@
 msgid ""
-msgstr "X-Generator: Weblate\nMIME-Version: 1.0\nContent-Type: text/plain; charset=UTF-8\nContent-Transfer-Encoding: 8bit"
+msgstr "PO-Revision-Date: 2025-11-06 23:29+0000\nLast-Translator: Anonymous <noreply@weblate.org>\nLanguage-Team: Hungarian <https://hosted.weblate.org/projects/tessel/game/hu/>\nLanguage: hu\nMIME-Version: 1.0\nContent-Type: text/plain; charset=UTF-8\nContent-Transfer-Encoding: 8bit\nPlural-Forms: nplurals=2; plural=n != 1;\nX-Generator: Weblate 5.15-dev\n"
