--- a/i18n/zh-Hant.po
+++ b/i18n/zh-Hant.po
@@ -1,17 +1,5 @@
 msgid ""
-msgstr ""
-"POT-Creation-Date: 2025-11-04 11:45+0800\n"
-"PO-Revision-Date: \n"
-"Last-Translator: gheescoo gheescoo@yandex.com\n"
-"Language-Team: \n"
-"Language: zh-Hant\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Generator: @lingui/cli\n"
-"Project-Id-Version: \n"
-"Report-Msgid-Bugs-To: \n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+msgstr "Project-Id-Version: \nReport-Msgid-Bugs-To: \nPOT-Creation-Date: 2025-11-04 11:45+0800\nPO-Revision-Date: 2025-11-06 23:29+0000\nLast-Translator: Anonymous <noreply@weblate.org>\nLanguage-Team: Chinese (Traditional Han script) <https://hosted.weblate.org/projects/tessel/game/zh_Hant/>\nLanguage: zh-Hant\nMIME-Version: 1.0\nContent-Type: text/plain; charset=utf-8\nContent-Transfer-Encoding: 8bit\nPlural-Forms: nplurals=1; plural=0;\nX-Generator: Weblate 5.15-dev\n"
 
 #. js-lingui-explicit-id
 #: src/grid/atlas/AmmannBeenkerAtlas.ts:11
