--- a/i18n/zh-Hant.po
+++ b/i18n/zh-Hant.po
@@ -1,5 +1,5 @@
 msgid ""
-msgstr "Project-Id-Version: \nReport-Msgid-Bugs-To: \nPOT-Creation-Date: 2025-11-04 11:45+0800\nPO-Revision-Date: 2025-11-06 23:29+0000\nLast-Translator: Anonymous <noreply@weblate.org>\nLanguage-Team: Chinese (Traditional Han script) <https://hosted.weblate.org/projects/tessel/game/zh_Hant/>\nLanguage: zh-Hant\nMIME-Version: 1.0\nContent-Type: text/plain; charset=utf-8\nContent-Transfer-Encoding: 8bit\nPlural-Forms: nplurals=1; plural=0;\nX-Generator: Weblate 5.15-dev\n"
+msgstr "Project-Id-Version: \nReport-Msgid-Bugs-To: \nPOT-Creation-Date: 2025-11-04 11:45+0800\nPO-Revision-Date: 2025-11-12 23:58+0000\nLast-Translator: Gijs van Tulder <gijs@vantulder.net>\nLanguage-Team: Chinese (Traditional Han script) <https://hosted.weblate.org/projects/tessel/game/zh_Hant/>\nLanguage: zh-Hant\nMIME-Version: 1.0\nContent-Type: text/plain; charset=utf-8\nContent-Transfer-Encoding: 8bit\nPlural-Forms: nplurals=1; plural=0;\nX-Generator: Weblate 5.15-dev\n"
 
 #. js-lingui-explicit-id
 #: src/grid/atlas/AmmannBeenkerAtlas.ts:11
@@ -172,37 +172,6 @@ msgid "ui.game.showMenuButton"
 msgstr "顯示菜單"
 
 #. js-lingui-explicit-id
-#: src/ui/shared/MainNavBar.ts:48
-msgid "ui.menu.AllGamesButton"
-msgstr ""
-
-#. js-lingui-explicit-id
-#: src/ui/settings/SmallNavBar.ts:49
-msgid "ui.menu.HowToPlayButton"
-msgstr ""
-
-#. js-lingui-explicit-id
-#: src/ui/shared/MainNavBar.ts:35
-msgid "ui.menu.MainMenuButton"
-msgstr ""
-
-#. js-lingui-explicit-id
-#: src/ui/shared/MainNavBar.ts:61
-msgid "ui.menu.PaintButton"
-msgstr ""
-
-#. js-lingui-explicit-id
-#: src/ui/settings/SmallNavBar.ts:34
-#: src/ui/shared/MainNavBar.ts:74
-msgid "ui.menu.SettingsButton"
-msgstr ""
-
-#. js-lingui-explicit-id
-#: src/ui/settings/SmallNavBar.ts:64
-msgid "ui.menu.StatisticsButton"
-msgstr ""
-
-#. js-lingui-explicit-id
 #: src/ui/game/GameDisplay.ts:171
 #: src/ui/paint/PaintDisplay.ts:66
 #: src/ui/setup/GameSetupDisplay.ts:145
@@ -249,39 +218,9 @@ msgid "ui.settings.ColorsOption.title"
 msgstr "{0, plural, =1 {一種顏色} =2 {兩種顏色} =3 {三種顏色} =4 {四種顏色} =5 {五種顏色} =6 {六種顏色} other {# 種顏色}}"
 
 #. js-lingui-explicit-id
-#: src/ui/settings/SettingsDisplay.ts:99
-msgid "ui.settings.description.autorotate"
-msgstr ""
-
-#. js-lingui-explicit-id
-#: src/ui/settings/SettingsDisplay.ts:78
-msgid "ui.settings.description.colorScheme"
-msgstr ""
-
-#. js-lingui-explicit-id
-#: src/ui/settings/SettingsDisplay.ts:92
-msgid "ui.settings.description.hints"
-msgstr ""
-
-#. js-lingui-explicit-id
-#: src/ui/settings/SettingsDisplay.ts:71
-msgid "ui.settings.description.language"
-msgstr ""
-
-#. js-lingui-explicit-id
-#: src/ui/settings/SettingsDisplay.ts:85
-msgid "ui.settings.description.placeholders"
-msgstr ""
-
-#. js-lingui-explicit-id
-#: src/ui/settings/SettingsDisplay.ts:106
-msgid "ui.settings.description.snap"
-msgstr ""
-
-#. js-lingui-explicit-id
 #: src/ui/settings/SettingsDisplay.ts:46
 msgid "ui.settings.title"
-msgstr "Tessel"
+msgstr "設定"
 
 #. js-lingui-explicit-id
 #: src/ui/setup/SegmentsOption.ts:56
@@ -438,3 +377,54 @@ msgstr "顯示佔位格"
 #: src/ui/shared/toggles.ts:55
 msgid "ui.toggles.snap"
 msgstr "吸附"
+
+#. js-lingui-explicit-id
+#: src/ui/settings/SmallNavBar.ts:49
+msgid "ui.menu.HowToPlayButton"
+msgstr "如何遊玩？"
+
+#. js-lingui-explicit-id
+#: src/ui/shared/MainNavBar.ts:61
+msgid "ui.menu.PaintButton"
+msgstr "填塗一格"
+
+#. js-lingui-explicit-id
+#: src/ui/settings/SmallNavBar.ts:34
+#: src/ui/shared/MainNavBar.ts:74
+msgid "ui.menu.SettingsButton"
+msgstr "設定"
+
+#. js-lingui-explicit-id
+#: src/ui/settings/SmallNavBar.ts:64
+msgid "ui.menu.StatisticsButton"
+msgstr "統計"
+
+#. js-lingui-explicit-id
+#: src/ui/settings/SettingsDisplay.ts:99
+msgid "ui.settings.description.autorotate"
+msgstr "自動旋轉原塊"
+
+#. js-lingui-explicit-id
+#: src/ui/settings/SettingsDisplay.ts:78
+msgid "ui.settings.description.colorScheme"
+msgstr "淺色模式、深色模式或跟隨設備"
+
+#. js-lingui-explicit-id
+#: src/ui/settings/SettingsDisplay.ts:92
+msgid "ui.settings.description.hints"
+msgstr "突出可行鑲嵌位置"
+
+#. js-lingui-explicit-id
+#: src/ui/settings/SettingsDisplay.ts:71
+msgid "ui.settings.description.language"
+msgstr "語言"
+
+#. js-lingui-explicit-id
+#: src/ui/settings/SettingsDisplay.ts:85
+msgid "ui.settings.description.placeholders"
+msgstr "顯示佔位格"
+
+#. js-lingui-explicit-id
+#: src/ui/settings/SettingsDisplay.ts:106
+msgid "ui.settings.description.snap"
+msgstr "吸附原塊"
