--- a/i18n/nl.po
+++ b/i18n/nl.po
@@ -1,5 +1,5 @@
 msgid ""
-msgstr "Project-Id-Version: \nReport-Msgid-Bugs-To: \nPOT-Creation-Date: 2025-10-27 12:12+0100\nPO-Revision-Date: 2025-11-12 23:58+0000\nLast-Translator: Gijs van Tulder <gijs@vantulder.net>\nLanguage-Team: Dutch <https://hosted.weblate.org/projects/tessel/game/nl/>\nLanguage: nl\nMIME-Version: 1.0\nContent-Type: text/plain; charset=utf-8\nContent-Transfer-Encoding: 8bit\nPlural-Forms: nplurals=2; plural=n != 1;\nX-Generator: Weblate 5.15-dev\n"
+msgstr "Project-Id-Version: \nReport-Msgid-Bugs-To: \nPOT-Creation-Date: 2025-10-27 12:12+0100\nPO-Revision-Date: 2025-11-13 23:09+0000\nLast-Translator: Gijs van Tulder <gijs@vantulder.net>\nLanguage-Team: Dutch <https://hosted.weblate.org/projects/tessel/game/nl/>\nLanguage: nl\nMIME-Version: 1.0\nContent-Type: text/plain; charset=utf-8\nContent-Transfer-Encoding: 8bit\nPlural-Forms: nplurals=2; plural=n != 1;\nX-Generator: Weblate 5.15-dev\n"
 
 #. js-lingui-explicit-id
 #: src/grid/atlas/AmmannBeenkerAtlas.ts:11
@@ -185,19 +185,9 @@ msgid "ui.menu.footer"
 msgstr "Een spel van <a href=\"https://www.vantulder.net/\">Gijs van Tulder</a>."
 
 #. js-lingui-explicit-id
-#: src/ui/menu/MainMenuDisplay.old.ts:87
-msgid "ui.menu.paintButton"
-msgstr "Tekenen"
-
-#. js-lingui-explicit-id
 #: src/ui/game/GameDisplay.ts:187
 msgid "ui.menu.restartGameButton"
 msgstr "Herstarten"
-
-#. js-lingui-explicit-id
-#: src/ui/menu/MainMenuDisplay.old.ts:54
-msgid "ui.menu.settingsButton"
-msgstr "Instellingen"
 
 #. js-lingui-explicit-id
 #: src/ui/game/GameDisplay.ts:179
@@ -205,11 +195,6 @@ msgstr "Instellingen"
 #: src/ui/menu/MainMenuDisplay.old.ts:76
 msgid "ui.menu.setupButton"
 msgstr "Ontwerpen"
-
-#. js-lingui-explicit-id
-#: src/ui/menu/MainMenuDisplay.old.ts:65
-msgid "ui.menu.statisticsButton"
-msgstr "Statistieken"
 
 #. js-lingui-explicit-id
 #. placeholder {0}: colors.length
@@ -435,6 +420,11 @@ msgid "ui.settings.description.placeholders"
 msgstr "Volgende tegelposities tonen"
 
 #. js-lingui-explicit-id
-#: src/ui/settings/SettingsDisplay.ts:106
-msgid "ui.settings.description.snap"
-msgstr "Tegels automatisch vastklikken"
+#: src/ui/settings/SettingsDisplay.ts:120
+msgid "ui.settings.description.highscore"
+msgstr "Highscore laten zien"
+
+#. js-lingui-explicit-id
+#: src/ui/shared/toggles.ts:67
+msgid "ui.toggles.highscore"
+msgstr "Highscore laten zien"
