--- a/fastlane/metadata/ios/nl-NL/release_notes.txt
+++ b/fastlane/metadata/ios/nl-NL/release_notes.txt
@@ -1,2 +1,4 @@
+Diverse wijzigingen en verbeteringen.
+
 * Added: a button to reshuffle the tile stack while playing.
 * New translation: Spanish (by @anauta).
