--- a/fastlane/metadata/ios/tr/release_notes.txt
+++ b/fastlane/metadata/ios/tr/release_notes.txt
@@ -1,2 +1,4 @@
+Çeşitli değişiklikler ve iyileştirmeler.
+
 * Added: a button to reshuffle the tile stack while playing.
 * New translation: Spanish (by @anauta).
