--- a/i18n/es.po
+++ b/i18n/es.po
@@ -1,5 +1,5 @@
 msgid ""
-msgstr "PO-Revision-Date: 2025-11-24 23:23+0000\nLast-Translator: anauta <treschavales@gmail.com>\nLanguage-Team: Spanish <https://hosted.weblate.org/projects/tessel/game/es/>\nLanguage: es\nMIME-Version: 1.0\nContent-Type: text/plain; charset=UTF-8\nContent-Transfer-Encoding: 8bit\nPlural-Forms: nplurals=2; plural=n != 1;\nX-Generator: Weblate 5.15-dev\n"
+msgstr "PO-Revision-Date: 2025-11-30 01:00+0000\nLast-Translator: \"J. Lavoie\" <j.lavoie@net-c.ca>\nLanguage-Team: Spanish <https://hosted.weblate.org/projects/tessel/game/es/>\nLanguage: es\nMIME-Version: 1.0\nContent-Type: text/plain; charset=UTF-8\nContent-Transfer-Encoding: 8bit\nPlural-Forms: nplurals=2; plural=n != 1;\nX-Generator: Weblate 5.15-dev\n"
 
 #. js-lingui-explicit-id
 #: src/grid/rules/DifferentEdgeColorsRuleSet.ts:18
@@ -448,9 +448,8 @@ msgstr "Tessel es un juego creado por <a href=\"{url}\">Gijs van Tulder</a>."
 
 #. js-lingui-explicit-id
 #: src/ui/settings/SettingsDisplay.ts:177
-#, fuzzy
 msgid "ui.settings.about.feedbackPrompt"
-msgstr "Tienes alguna idea que compartir? <a href=\"{email}\">Envíame un email</a> o <a href=\"{github}\">dímelo en GitHub</a>."
+msgstr "¿Tienes alguna idea que compartir? <a href=\"{email}\">Envíame un correo electrónico</a> o <a href=\"{github}\">dímelo en GitHub</a>."
 
 #. js-lingui-explicit-id
 #: src/ui/settings/SettingsDisplay.ts:165
